--- a/gladwell.html
+++ b/gladwell.html
@@ -19,8 +19,8 @@
       </ul>
     </ul>
   </nav>
-  <div class="under-nav"></div>
   <article class="project-wrapper">
+    <div class="under-nav"></div>
     <h1>Gladwell Massage: website and branding</h1>
     <img src="./imgs/gladwell-desktop.png" alt="" class="project-img">
   <h2>Client</h2>
@@ -38,8 +38,8 @@
   <p>The new website is still in the development phase, yet we are already seeing increased visits to the original website thanks to improving SEO via Google Business. This improvement was made as a result of user tests.</p>
   <img src="./imgs/gladwell-stats.png" alt="" class="project-img">
   <p>With the new designs, I am creating a website that is so mobile-friendly it looks like an app, giving a sense of personalisable luxury that users claim to associate with massage therapy.</p>
-    <img src="./imgs/gladwell-mobile.png" alt="" class="project-img">
-  <p>Finally, users reported that the <a href="http://massagewatford.com/" target="_blank">current logo</a> is recognisable but "could be more exciting". I tried rearranging the typography to create a more passionate and dynamic emblem for Daniel's business.</p>
+    <!-- <img src="./imgs/gladwell-mobile.png" alt="" class="project-img"> -->
+  <p>Finally, users reported that the <a href="http://massagewatford.com/" target="_blank">current logo</a> is recognisable but "could be more exciting". I rearranged the typography to create a more passionate and dynamic emblem for Daniel's business.</p>
     <img src="./imgs/gladwell-logo-variations.png" alt="" class="project-img">
     <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, HTML, CSS, GitHub.</em></p>
   </article>
