--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="under-nav"></div>
   <article class="about-wrapper">
     <section id="landing">
+      <div class="under-nav"></div>
       <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and web apps.</h1>
     </section>
     <section class="about-main-text">
@@ -59,8 +60,8 @@
       <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p> -->
 
     <div id="more">
-      <h1 id="h1-more">Still here? You flatter.</h1>
-        <p>Well-travelled and trilingual (FR, ES, ENG), I am an adventurous truth-seeker, fascinated by cross-cultural theories of human nature (particularly embodiment/extended cognition). Alongside design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p>
+      <h1 id="h1-more">Still here?</h1>
+        <p>Well-travelled and trilingual (FR, ES, ENG), I am an adventurous truth-seeker, fascinated by cross-cultural theories of human nature (particularly embodiment/extended cognition). Alongside practising design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p>
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
