--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,8 @@
     </ul>
   </nav>
 
+<div class="under-nav"></div>
+
 <article class="portfolio-wrapper" id="portfolio-section">
 
   <div class="portfolio-cover">
