--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,10 @@
 
   <main role="main" class="main">
 
+    <div class="under-nav"></div>
+
     <section class="contact" id="contact">
-      <h1>Contact</h1>
+      <h1><b>Contact</b></h1>
       <p class="contact__para">
         I'd love to hear about your project. Please fill in the contact form below. Alternatively, send me an ol' fashioned email: lucy.rose.sabin(a)gmail.com</p>
       <form
