change main img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="about-main-text">
       <h1>My approach is</h1>
       <ul class="my-approach-list">
-        <h3><li>User-centred (of course)</li></h3>
+        <h3><li>User-centred</li></h3>
         <dl>Every stage in the design process is informed by the needs or wants of the customer/"user"/human who interacts with your product.</dl>
         <h3><li>Empirical and agile</li></h3>
         <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining feedback and making observations via testing, then having the agility to incorporate learnings as efficiently and effectively
