add profile pic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and web apps.</h1>
     </section>
     <section class="about-main-text">
-      
+
       <h1>The iterative design process</h1>
       <img src="./imgs/ux-process.png" alt="my ux process" class="about-drawing">
 
@@ -66,10 +66,14 @@
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
-        <!-- <div class="contact__button"><a href="./contact.html">Get in touch</a></div> -->
+    <div id="profile-pic-container">
+    <img src="./imgs/profile-drawing-vector.png" alt="" id="profile-pic">
+    </div>
+
         <a href="./index.html" class="back-top"><h3>Back to top</h3></a>
 
     </section>
+
   </article>
   <div class="under-footer"></div>
   <footer>
