--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="under-nav"></div>
 
     <section class="contact" id="contact">
-      <h1><b>Contact</b></h1>
+      <h1 id="contact-header">Contact</h1>
       <p class="contact__para">
         I'd love to hear about your project. Please fill in the contact form below. Alternatively, send me an ol' fashioned email: lucy.rose.sabin(a)gmail.com</p>
       <form
