--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <article class="about-wrapper">
     <section id="landing">
       <div class="under-nav"></div>
-      <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and web apps.</h1>
+      <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and apps.</h1>
     </section>
     <section class="about-main-text">
 
