add stage 1 updates

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <section class="contact" id="contact">
       <h1 id="contact-header">Contact</h1>
       <p class="contact__para">
-        I'd love to hear about your project. Please fill in the contact form below. Alternatively, send me an ol' fashioned email: lucy.rose.sabin(a)gmail.com</p>
+        I'd love to hear about your project. Please fill in the contact form below. Alternatively, send your email to: lucy.rose.sabin(a)gmail.com</p>
       <form
         role="form"
         class="form"
@@ -63,8 +63,7 @@
           placeholder="Your message"
           required></textarea>
 
-        <button class="form__btn" type="submit">Submit</button>
-
+        <button class="form__btn" type="submit" name="_next" value="./thanks.html"/>Submit</button>
         <!--customise formspree-->
         <input type="hidden" name="_next" value="/portfolio.html"/>
         <input type="hidden" name="_subject" value="Yoga website enquiry" />
@@ -78,7 +77,7 @@
 
   <footer>
     <ul>
-      <li id="copyright">&copy Copyright 2017 L.S.</li>
+      <li id="copyright">&copy Copyright 2018 L.S.</li>
     </ul>
   </footer>
 </body>
