--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
       <ul>
         <li class="heading">How to live mindfully, every day.</li></br>
         <dl>
-          <a href="https://yogainternational.com/article/view/the-ultimate-guide-to-taking-yoga-off-the-mat" target="_blank">"The Ultimate Guide To Taking Yoga Off The Mat"</a>, <em>Yoga International</em>, February 7th 2017 (9/10 from around 1000 reviewers).
+          <a href="https://yogainternational.com/article/view/the-ultimate-guide-to-taking-yoga-off-the-mat" target="_blank">"The Ultimate Guide To Taking Yoga Off The Mat"</a>, <em>Yoga International</em>, February 7th 2017 (9/10 from around 1,300 reviewers).
         </dl>
         <dl>
           "Improve Your Relationships Through Yoga", <em>Om Magazine</em> (print edition), February 1st 2017.
@@ -38,7 +38,7 @@
         </dl>
         <li class="heading">On Cinema, Philosophy and interdisciplinary thinking.</li></br>
         <dl>
-          "Representing Masculinity in Bigas Luna...", <em>Film Matters</em>, TBC, 2017.
+          <a href="https://www.intellectbooks.co.uk/journals/view-Article,id=25485/" target="_blank">"Representing Masculinity in Bigas Luna..."</a>, <em>Film Matters</em>, December 2017.
         </dl>
         <dl>
           <a href="https://shecancode.io/blog/how-my-liberal-arts-degree-prepared-me-for-learning-to-code" target="_blank">"How My Liberal Arts Degree Prepared Me For Learning To Code"</a>, <em>SheCanCode</em>, September 30th, 2016.
@@ -88,7 +88,7 @@
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy; Copyright 2017 L.S.</li>
+      <li id="copyright">&copy; Copyright 2018 L.S.</li>
     </ul>
   </footer>
 </body>
