--- a/index.html
+++ b/index.html
@@ -24,20 +24,24 @@
   <article class="about-wrapper">
     <section id="landing">
       <div class="under-nav"></div>
-      <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and apps.</h1>
+      <h1>Hi, I'm a freelance user experience designer, specialising in websites and apps.</h1>
     </section>
+
+    <section id="landing-transparent">
+    </section>
+  </article>
+
+  <article class="about-wrapper solid-background">
     <section class="about-main-text">
+      <h1>User experience design is informed by market/psychological research in order to create an effective interface.</h1>
+      <img src="./imgs/modern-ux-gif.gif" alt="my ux process" class="about-drawing">
 
-      <h1>The iterative design process</h1>
-      <img src="./imgs/ux-process.png" alt="my ux process" class="about-drawing">
-
-      <h1>My approach is</h1>
+      <h1>My tried and tested approach is:</h1>
       <ul class="my-approach-list">
         <h3><li>User-centred</li></h3>
-        <dl>Every stage in the design process is informed by the needs or wants of the customer/"user"/human who interacts with your product.</dl>
+        <dl>Every stage in the design process is informed by the needs of the user.</dl>
         <h3><li>Empirical and agile</li></h3>
-        <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining feedback and making observations via testing, then having the agility to incorporate learnings as efficiently and effectively
-          as possible, within the iterative design process.</dl>
+        <dl>I obtain feedback and make observations via testing, then incorporate learnings as efficiently and effectively as possible.</dl>
         <h3><li>Beautifully intuitive</li></h3>
         <dl>A self-taught coder and artist at heart, I am able to respond intelligently and sensitively to both technological and aesthetic requirements.</dl>
         <h3><li>Holistic and empathetic</li></h3>
@@ -46,7 +50,7 @@
       </ul></br>
 
       <h1>A little about me</h1>
-      <img src="./imgs/my-story.png" alt="" class="about-drawing">
+      <img src="./imgs/my-story-gif.gif" alt="" class="about-drawing">
 
       <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
       <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
@@ -62,23 +66,24 @@
 
     <div id="more">
       <h1 id="h1-more">Still here?</h1>
-        <p>Well-travelled and trilingual (FR, ES, ENG), I am an adventurous truth-seeker, fascinated by cross-cultural theories of human nature (particularly embodiment/extended cognition). Alongside practising design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p>
+        <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. Whilst studying Philosophy and Modern Languages (FR, ES) at Durham, I grew passionate about embodiment and identity theories. I see the designed world as an extension of our embodiment and identity as human beings.</p>
+        <p>Alongside practical projects, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach Vinyasa Flow Yoga in Hackney, on Thursdays and Sundays.</p>
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
     <div id="profile-pic-container">
-    <img src="./imgs/profile-drawing.png" alt="" id="profile-pic">
+    <img src="./imgs/profile-drawing.gif" alt="" id="profile-pic">
     </div>
 
         <a href="./index.html" class="back-top"><h3>Back to top</h3></a>
 
     </section>
-
   </article>
+
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy; Copyright 2017 L.S.</li>
+      <li id="copyright">&copy; Copyright 2018 L.S.</li>
     </ul>
   </footer>
 </body>
