--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,18 @@
       <div class="container-fade">
         <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">StopMyCraving</br>(e-commerce & packaging)</div>
+          <div class="text">StopMyCraving</br>(e-commerce website)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="portfolio-cover">
+    <a href="./stopmycraving.html">
+      <div class="container-fade">
+        <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
+        <div class="overlay">
+          <div class="text">StopMyCraving</br>(product & packaging)</div>
         </div>
       </div>
     </a>
@@ -41,17 +52,6 @@
         <img src="./imgs/gladwell-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
           <div class="text">Gladwell Massage</br>(website)</div>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="portfolio-cover">
-    <a href="./coot-freight.html">
-      <div class="container-fade">
-        <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Coot Freight</br>(website & copy)</div>
         </div>
       </div>
     </a>
