--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div id="profile-pic-container">
-    <img src="./imgs/profile-drawing.gif" alt="" id="profile-pic">
+    <img src="./imgs/profile-drawing.png" alt="" id="profile-pic">
     </div>
 
         <a href="./index.html" class="back-top"><h3>Back to top</h3></a>
