--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 <article class="portfolio-wrapper" id="portfolio-section">
 
   <div class="portfolio-cover">
-    <a href="./stopmycraving.html">
+    <a href="./stopmycraving-website.html">
       <div class="container-fade">
         <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
@@ -36,9 +36,9 @@
   </div>
 
   <div class="portfolio-cover">
-    <a href="./stopmycraving.html">
+    <a href="./stopmycraving-product.html">
       <div class="container-fade">
-        <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/valentines-closed-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
           <div class="text">StopMyCraving</br>(product & packaging)</div>
         </div>
