--- a/gladwell.html
+++ b/gladwell.html
@@ -21,25 +21,20 @@
   </nav>
   <article class="project-wrapper">
     <div class="under-nav"></div>
-    <h1>Gladwell Massage: website and branding</h1>
+    <h1>Gladwell Massage: new and improved website and branding.</h1>
     <img src="./imgs/gladwell-desktop.png" alt="" class="project-img">
   <h2>Client</h2>
-  <p>Daniel Gladwell is a renowned masseur (whose services I wholeheartedly recommend), with over 20 years' international experience.
+  <p>Daniel Gladwell is a renowned massage therapist with over 20 years' international experience. He teaches the "Gladwell Massage" style to other therapists on professional training courses.
   <h2>Brief</h2>
-  <p>Investigate the user journey of booking a massage and reedesign <a href="http://massagewatford.com/" target="_blank">Daniel's website</a> accordingly.</p>
+  <p>Investigate the user journey of booking a massage and redesign <a href="http://massagewatford.com/" target="_blank">Daniel's website</a> accordingly, with a view to creating an additional, separate website for his training courses.</p>
   <h2>Deliverables</h2>
-  <p>Documented customer behaviour insights, mobile-friendly website designed and developed, redesigned logo and branding.</p>
+  <p>Documented customer behaviour insights, mobile-friendly websites designed and developed, redesigned logo and branding.</p>
   <h2>Process</h2>
-  <p>We identified key user groups, developed user personas, and conducted a survey with people who have booked a massage or could be tempted. We asked WHEN, WHY, HOW, WHERE, and WHICH. Insights revealed that people value proximity, peer reviews, and the possibility to book quickly via their mobile device.</p>
-  <img src="./imgs/gladwell-form.png" alt="" class="project-img">
-  <p>I designed a black and white interactive prototype for the new website which, following testing for user flow, is being given a lightly coloured, slightly whimsical, yet firm aesthetic.</p>
-  <p>The wireframes I am designing are super mobile-friendly, to encourage booking on the go. I also took the liberty of registering Gladwell Massage as a Google Business, which boosted website traffic by up to 50%, whilst highlighting proximity and encouraging more customer reviews.</p>
+  <p>We identified key user groups based on Daniel's client base, developed user personas, and conducted a survey with people who have booked a massage or could be tempted. We asked WHEN, WHY, HOW, WHERE, and WHICH. Insights revealed that people value proximity, peer reviews, and the possibility to book quickly via their mobile device.</p>
+  <p>The website design is "mobile-first", to encourage booking on the go. I also took the liberty of registering Gladwell Massage as a Google Business, which boosted website traffic by up to 50%, whilst highlighting proximity and encouraging more customer reviews.</p>
   <h2>Outcomes</h2>
-  <p>The new website is still in the development phase, yet we are already seeing increased visits to the original website thanks to improving SEO via Google Business. This improvement was made as a result of user tests.</p>
-  <img src="./imgs/gladwell-stats.png" alt="" class="project-img">
-  <p>With the new designs, I am creating a website that is so mobile-friendly it looks like an app, giving a sense of personalisable luxury that users claim to associate with massage therapy.</p>
-    <!-- <img src="./imgs/gladwell-mobile.png" alt="" class="project-img"> -->
-  <p>Finally, users reported that the <a href="http://massagewatford.com/" target="_blank">current logo</a> is recognisable but "could be more exciting". I rearranged the typography to create a more passionate and dynamic emblem for Daniel's business.</p>
+  <p>The new website is still in the development phase, yet we are already seeing increased visits to the original website thanks to improving SEO via Google Business.</p>
+  <p>More images coming soon!</p>
     <img src="./imgs/gladwell-logo-variations.png" alt="" class="project-img">
     <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, HTML, CSS, GitHub.</em></p>
   </article>
