add redirect page

--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
           placeholder="Your message"
           required></textarea>
 
-        <button class="form__btn" type="submit" name="_next" value="./thanks.html"/>Submit</button>
-        <!--customise formspree-->
-        <input type="hidden" name="_next" value="/portfolio.html"/>
-        <input type="hidden" name="_subject" value="Yoga website enquiry" />
+        <button class="form__btn" type="submit"/>Submit</button>
+
+        <input type="hidden" name="_next" value="http://www.lucysabin.com/thanks.html"/>
+        <input type="hidden" name="_subject" value="ux website enquiry" />
         <input type="hidden" name="_format" value="plain" />
 
       </form>
