add redirect url

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
         <button class="form__btn" type="submit"/>Submit</button>
 
-        <input type="hidden" name="_next" value="http://www.lucysabin.com/thanks.html"/>
+        <input type="hidden" name="_next" value="./thanks.html"/>
         <input type="hidden" name="_subject" value="ux website enquiry" />
         <input type="hidden" name="_format" value="plain" />
 
