add basic styling to contact redirect page

--- a/thanks.html
+++ b/thanks.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="master.css" type="text/css">
+  <title>Message Received!</title>
 </head>
 <body>
 
-Thank you for your message. I will aim to respond within 2-3 working days.
-
-Return to <a href="./index.html">Homepage</a>.
+<section id="contact-redirect">
+<p>Thank you for your message! I will aim to respond within 2-3 working days.</p>
+<p>Return to <a href="./index.html">Home</a>.</p>
+</section>
 
 </body>
 </html>
