--- a/gladwell.html
+++ b/gladwell.html
@@ -19,24 +19,22 @@
       </ul>
     </ul>
   </nav>
-  <article class="project-wrapper">
+
     <div class="under-nav"></div>
-    <h1>Gladwell Massage: new and improved website and branding.</h1>
-    <img src="./imgs/gladwell-desktop.png" alt="" class="project-img">
+
+    <iframe src="https://marvelapp.com/341di3c?emb=1&iosapp=false&frameless=false" allowTransparency="true" frameborder="0" onload="this.width=screen.width;this.height=screen.height;" margin="0"></iframe>
+
+  <article class="project-wrapper">
+    <h1>Gladwell School of Massage: Website & Logo.</h1>
   <h2>Client</h2>
-  <p>Daniel Gladwell is a renowned massage therapist with over 20 years' international experience. He teaches the "Gladwell Massage" style to other therapists on professional training courses.
+  <p>Daniel Gladwell is a renowned massage therapist with over 20 years' international experience. He gives professional training courses and needed a website and logo to showcase his school.
   <h2>Brief</h2>
-  <p>Investigate the user journey of booking a massage and redesign <a href="http://massagewatford.com/" target="_blank">Daniel's website</a> accordingly, with a view to creating an additional, separate website for his training courses.</p>
+  <p>Gladwell School of Massage needs to appeal to a tried and tested user group (25-35 year olds with interests in yoga and other healing practices). The branding must tie in with that of Daniel's existent personal brand, to capture and reinforce his current network.</p>
   <h2>Deliverables</h2>
-  <p>Documented customer behaviour insights, mobile-friendly websites designed and developed, redesigned logo and branding.</p>
+  <p>Mobile-friendly website with integrated contact forms developed on Squarespace, along with a logo that clearly conveys the purpose of the school.</p>
   <h2>Process</h2>
-  <p>We identified key user groups based on Daniel's client base, developed user personas, and conducted a survey with people who have booked a massage or could be tempted. We asked WHEN, WHY, HOW, WHERE, and WHICH. Insights revealed that people value proximity, peer reviews, and the possibility to book quickly via their mobile device.</p>
-  <p>The website design is "mobile-first", to encourage booking on the go. I also took the liberty of registering Gladwell Massage as a Google Business, which boosted website traffic by up to 50%, whilst highlighting proximity and encouraging more customer reviews.</p>
-  <h2>Outcomes</h2>
-  <p>The new website is still in the development phase, yet we are already seeing increased visits to the original website thanks to improving SEO via Google Business.</p>
-  <p>More images coming soon!</p>
-    <img src="./imgs/gladwell-logo-variations.png" alt="" class="project-img">
-    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, HTML, CSS, GitHub.</em></p>
+  <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. The bright colours are warm, upon Daniel's request, and the font is accessible, with a slightly handwritten slant. Both the colour scheme and the font reflect the approachable nature of the school.</p>
+    <p><em>I'm using: pencil and paper for rapid prototyping, Squarespace for development, Photoshop for the logo.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
