--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <article class="about-wrapper">
     <section id="landing">
       <div class="under-nav"></div>
-      <h1>Hi, I'm a freelance user experience designer, specialising in websites and apps.</h1>
+      <h1>Hi, I'm Lucy, a user-friendly designer and developer.</h1>
     </section>
 
     <section id="landing-transparent">
@@ -33,7 +33,7 @@
 
   <article class="about-wrapper solid-background">
     <section class="about-main-text">
-      <h1>User experience design is informed by market/psychological research in order to create an effective interface.</h1>
+      <h1>The User Experience (UX) approach to design is practical, based on answering the needs of real people... </h1>
       <img src="./imgs/modern-ux-gif.gif" alt="my ux process" class="about-drawing">
 
       <h1>My tried and tested approach is:</h1>
@@ -49,8 +49,8 @@
           and the way they perceive or experience the world, perhaps sparking a moment of joy.</br>
       </ul></br>
 
-      <h1>A little about me</h1>
-      <img src="./imgs/my-story-gif.gif" alt="" class="about-drawing">
+      <h1>My Skills and Experience</h1>
+      <img src="./imgs/my-story.gif" alt="" class="about-drawing">
 
       <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
       <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
@@ -66,7 +66,8 @@
 
     <div id="more">
       <h1 id="h1-more">Still here?</h1>
-        <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. Whilst studying Philosophy and Modern Languages (FR, ES) at Durham, I grew passionate about embodiment and identity theories. I see the designed world as an extension of our embodiment and identity as human beings.</p>
+        <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. Whilst studying Philosophy and Modern Languages (🇫🇷, 🇪🇸) at Durham University, I grew passionate about embodiment and identity theories. I see the designed world as an extension of our embodiment and identity as human beings.</p>
+        <p>At the Royal College of Art, my research involves applying principles from yoga and other embodiment practices to design processes.</p>
         <p>Alongside practical projects, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach Vinyasa Flow Yoga in Hackney, on Thursdays and Sundays.</p>
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
