--- a/makatalk.html
+++ b/makatalk.html
@@ -23,12 +23,12 @@
   </nav>
   <article class="project-wrapper">
     <div class="under-nav"></div>
-    <h1>MakaTalk: overcoming communication barriers with Makaton sign language.</h1>
     <img src="./imgs/makatalk.png" alt="" class="project-img">
+    <h1>MakaTalk: Makaton Sign Language App for NHS Therapists.</h1>
     <h2>Client</h2>
     <p>Brent Child and Family Clinic (NHS), with support from The Anna Freud Centre for Children and Families.</p>
     <h2>Team</h2>
-    <p>Two designers/developers: Martha and I.</p>
+    <p>Myself and another designer/developer.</p>
     <p>Two product owners: Sarah and Farrah from Brent Clinic.</p>
     <h2>Brief</h2>
     <p>Overcome communication barriers and improve overall progress tracking of therapy sessions for young persons with learning difficulties, by digitally optimising pre and post session surveys of patient condition.</p>
@@ -48,7 +48,7 @@
     <img src="./imgs/makatalk-options.png" alt="" class="project-img">
     <h2>Feedback</h2>
     <p><em>"Just wanted to say a HUGE thank you to you all for all the time, effort and enthusiasm you put into this project, including the extra time you put in, even after the allocated 4 weeks – it is VERY much appreciated – our service users will most definitely benefit from this app and we are eager to use it as part of our service."</em> Farrah, Assistant Psychologist at Brent Clinic.</p>
-    <p><em>I used: pencil and paper, HTML5, CSS, JavaScript.</em></p>
+    <p><em>I used: pencil and paper, HTML5, CSS, JavaScript, YouTube API.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
