--- a/nourish.html
+++ b/nourish.html
@@ -21,19 +21,19 @@
   </nav>
   <article class="project-wrapper">
     <div class="under-nav"></div>
-    <h1>Nourish: a discreet "food diary" for patients recovering from eating disorders.</h1>
     <div class="img-panel">
       <img src="./imgs/nourish-logameal.png" alt="" class="project-img nourish-mobile">
       <img src="./imgs/nourish-calendar.png" alt="" class="project-img nourish-mobile">
       <img src="./imgs/nourish-modal.png" alt="" class="project-img nourish-mobile">
     </div>
+    <h1>Nourish: An App for Therapy Patients Recovering from Eating Disorders.</h1>
     <h2>Client</h2>
     <p>Anna Freud Centre for Children and Families</p>
     <h2>Brief</h2>
     <p>People who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out an A4 form (pictured below) Every. Single. Time. you eat or drink something!</p>
     <p>Our product owner was a volunteer at Anna Freud who had been through the recovery process for Anorexia and Bulimia Nervosa. She wanted to revolutionise the paper diaries that patients are expected to fill out several times a day to overcome the issues she had encountered; she wanted to create a digital equivalent that saves time and effort.</p>
     <h2>Team</h2>
-    <p>Three feisty females from Founders and Coders, plus a product owner from Anna Freud.</p>
+    <p>Three developers from Founders and Coders, plus a product owner from the Anna Freud Centre.</p>
     <h2>Deliverable</h2>
     <p>We had 5 days to create a working prototype for an app that records each meal experience.</p>
     <h2>Description/Process</h2>
