--- a/portfolio.html
+++ b/portfolio.html
@@ -49,9 +49,9 @@
   <div class="portfolio-cover">
     <a href="./gladwell.html">
       <div class="container-fade">
-        <img src="./imgs/gladwell-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/gladwell-school-logo.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Gladwell Massage</br>(website)</div>
+          <div class="text">Gladwell School of Massage</br>(website)</div>
         </div>
       </div>
     </a>
@@ -89,7 +89,7 @@
       </div>
     </a>
   </div>
-
+<!--
   <div class="portfolio-cover">
     <a href="./hardware.html">
       <div class="container-fade">
@@ -121,19 +121,11 @@
       </div>
     </div>
   </a>
-</div>
+</div> -->
 
   </article>
 
-  <div id="orgs">
-    <h2 id="orgs-heading">I've collaborated with...</h1>
-    <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
-    <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
-    <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
-    <img src="./imgs/logos-israel.png" alt="Brit Embassy and Israel Tech Hub" class="partner-logo">
-    <img src="./imgs/logos-uca.png" alt="University for Creative Arts" class="partner-logo">
-    <img src="./imgs/logos-stopmycraving.png" alt="stopmycraving logo" class="partner-logo">
-  </div>
+  
 
   <div class="under-footer"></div>
 
