--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,9 @@
       <ul>
         <li class="heading">How to live mindfully, every day.</li></br>
         <dl>
+          <a href="https://blog.sivanaspirit.com/yg-yoga-elemental-personality/" target="_blank">"Choose A Yoga Practice To Complement Your Elemental Personality"</a>, <em>Sivana East</em>, February 2018.
+        </dl>
+        <dl>
           <a href="https://yogainternational.com/article/view/the-ultimate-guide-to-taking-yoga-off-the-mat" target="_blank">"The Ultimate Guide To Taking Yoga Off The Mat"</a>, <em>Yoga International</em>, February 7th 2017 (9/10 from around 1,300 reviewers).
         </dl>
         <dl>
