--- a/stopmycraving-product.html
+++ b/stopmycraving-product.html
@@ -21,23 +21,23 @@
   </nav>
   <article class="project-wrapper">
     <div class="under-nav"></div>
-    <h1>StopMyCraving: product & packaging design for a food tech startup.</h1>
     <img src="./imgs/stopmycraving-box.png" alt="" class="project-img">
+    <h1>StopMyCraving: Product & Packaging.</h1>
     <h2>Client</h2>
     <p>StopMyCraving is a food tech company that works with independent producers. It was judged a UK Top 20 startup last year, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a> this year. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings.</p>
     <h2>Brief</h2>
-    <p>I have been working closely with the developer, CEO, and nutritionist to develop user-centered products and packaging since October 2017.</p>
+    <p>I worked closely with the developer, CEO, and nutritionist to develop user-centered products and packaging.</p>
     <h2>Deliverables</h2>
-    <p>Based on extensive research into healthy snacking trends, we co-designed a range of seven <a href="https://stopmycraving.com/snack-box/" target="_blank">"snack boxes"</a> that correspond to our target users. See our Seasonal (Valentine's) Day Box below...</p>
+    <p>Based on extensive research into healthy snacking trends, I co-designed a range of seven "snack boxes" that correspond to our target users. See the Valentine's Box below...</p>
     <img src="./imgs/valentines-box-open-tissue.png" alt="" class="project-img">
     <h2>Process</h2>
-    <p>I held focus groups to verify hypotheses about who our target users are and what they need or want. We then adopted a "beach head" marketing strategy, i.e. winning over specific consumer groups in order to break into the mainstream.</p>
-    <p>Thanks to our nutritionist, the contents of the boxes are selected from our range of snacks and drinks with the target user in mind, e.g. The Halo Box contains only organic products.</p>
-    <p>In terms of packaging, I designed a solution that uses a neat and robust, recyclable box that can withstand international shipping and is cost effective. The logo and branding is added with custom-made stamps to retain a rustic yet bold look. The final result is exciting to receive and to open, in a satisfyingly minimalist way.</p>
+    <p>I held focus groups to verify hypotheses about who our target users are and what they need or want. The team then adopted a "beachhead" marketing strategy, i.e. winning over specific consumer groups in order to break into the mainstream.</p>
+    <p>The contents of the boxes are selected from our range of snacks and drinks with the target user in mind, e.g. the Yummy Mummy box contains all organic products.</p>
+    <p>In terms of packaging, I designed a solution that uses a neat and robust, recyclable box that can withstand international shipping and is cost effective. The logo and branding is added with custom-made stamps to retain a rustic yet bold look. The final result is exciting to receive and to open.</p>
     <img src="./imgs/valentines-box-closed.png" alt="" class="project-img">
     <h2>Outcomes</h2>
-    <p>Since I joined StopMyCraving in October as a freelancer, they have been accepted onto a major accelerator programme in Europe. The new products are now retailing on Danish department store, <a href="https://moodings.com/products/action-packed-box?variant=3465454321704" target="_blank">Moodings</a>. I am continually updating our Seasonal Snack Box and developing bespoke offerings for our corporate clients.</p>
-    <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator, inVision, Zeplin.</em></p>
+    <p>With its new product range, StopMyCraving has been accepted onto Europe's no.1 accelerator programme in Europe, Accelerace. The new products are now retailing on Danish department store, Moodings.</p>
+    <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator (packaging dielines), inVision, Zeplin.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
