--- a/stopmycraving-website.html
+++ b/stopmycraving-website.html
@@ -19,23 +19,24 @@
       </ul>
     </ul>
   </nav>
-  <article class="project-wrapper">
     <div class="under-nav"></div>
-    <h1>StopMyCraving: e-commerce website for a food tech startup.</h1>
-    <img src="./imgs/stopmycraving-home.png" alt="" class="project-img">
+
+    <iframe src="https://marvelapp.com/15cij32g?emb=1&iosapp=false&frameless=false" allowTransparency="true" frameborder="0" onload="this.width=screen.width;this.height=screen.height;" margin="1"></iframe>
+
+    <article class="project-wrapper">
+
+    <h1>StopMyCraving: E-commerce Website Design.</h1>
     <h2>Client</h2>
-    <p><a href="https://stopmycraving.com/" target="_blank">StopMyCraving</a> is a food tech company that works with independent producers. It was judged a UK Top 20 startup last year, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a> this year. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings.</p>
+    <p><a href="https://stopmycraving.com/" target="_blank">StopMyCraving</a> is a food tech company that works with independent producers. It has been judged a UK Top 20 startup, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a>. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings. It requires in depth knowledge of user behaviour.</p>
     <h2>Brief</h2>
-    <p>I have been working closely with the developer, CEO, and nutritionist to re-design and re-brand the entire online store, since October 2017.</p>
+    <p>I worked closely with the developer, CEO, and nutritionist to re-design and re-brand the entire online store.</p>
     <h2>Deliverables</h2>
     <p>Responsive website wireframes for all pages including e-commerce user journey and blog, graphics to illustrate products and features to consumers, visual marketing content, interactive prototype for testing further iterations, documented research into user behaviours (testing and interviews, focus groups, surveys).</p>
-    <img src="./imgs/stopmycraving-checkout.png" alt="" class="project-img">
     <h2>Process</h2>
     <p>Interviews and user tests early on helped to establish the key changes that were needed. Via Skype, I asked 9 users to try using the old e-commerce platform and compare it with competitors' platforms.</p>
     <p>Changes were prototyped and I consulted with the developers at pertinent points while iteratively adding more details to the wireframes and facilitating further focus groups.</p>
-    <img src="./imgs/stopmycraving-ordered.png" alt="" class="project-img">
     <h2>Outcomes</h2>
-    <p>Since I joined StopMyCraving in October as a freelancer, they have been accepted onto a major accelerator programme in Europe. The new website is a vital step forward in upscaling.</p>
+    <p>The new website is a vital step forward in upscaling the startup. It has been successful in generating growing sales.</p>
     <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator, inVision, Zeplin.</em></p>
   </article>
   <div class="under-footer"></div>
