--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1 id="h1-more">Still here?</h1>
         <p>My curiosity about design fundamentally stems from curiosity about human nature and how we interact with the world. Whilst studying Philosophy and Modern Languages (🇫🇷, 🇪🇸) at Durham University, I grew passionate about embodiment and identity theories. I see the designed world as an extension of our embodiment and identity as human beings.</p>
         <p>At the Royal College of Art, my research involves applying principles from yoga and other embodiment practices to design processes.</p>
-        <p>Alongside practical projects, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach Vinyasa Flow Yoga in Hackney, on Thursdays and Sundays.</p>
+        <p>Alongside practical projects, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach Vinyasa Flow Yoga in Hackney, on Thursdays and Sundays. See <a href="http://www.lucy.yoga/" target="_blank">lucy.yoga</a> to find out more.</p>
       <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
