--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,11 @@
 <article class="portfolio-wrapper" id="portfolio-section">
 
   <div class="portfolio-cover">
-    <a href="./stopmycraving-website.html">
+    <a href="./plantbox.html">
       <div class="container-fade">
-        <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
+        <img src="./imgs/plantbox-window.jpg" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">StopMyCraving</br>(e-commerce website)</div>
+          <div class="text">PlantBox</br>(e-commerce design/development)</div>
         </div>
       </div>
     </a>
@@ -40,18 +40,18 @@
       <div class="container-fade">
         <img src="./imgs/valentines-closed-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">StopMyCraving</br>(product & packaging)</div>
+          <div class="text">StopMyCraving</br>(product design)</div>
         </div>
       </div>
     </a>
   </div>
 
   <div class="portfolio-cover">
-    <a href="./gladwell.html">
+    <a href="./stopmycraving-website.html">
       <div class="container-fade">
-        <img src="./imgs/gladwell-school-logo.png" alt="" class="portfolio-piece">
+        <img src="./imgs/smc-cover.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Gladwell School of Massage</br>(website)</div>
+          <div class="text">StopMyCraving</br>(e-commerce/comms design)</div>
         </div>
       </div>
     </a>
@@ -60,15 +60,26 @@
 <div class="portfolio-cover">
   <a href="./makatalk.html">
     <div class="container-fade">
-      <img src="./imgs/makatalk-cover-mobile.png" alt="" class="portfolio-piece">
+      <img src="./imgs/makatalk-cover.png" alt="" class="portfolio-piece">
       <div class="overlay">
-        <div class="text">MakaTalk</br>(iPad app)</div>
+        <div class="text">MakaTalk</br>(iPad app design/development)</div>
       </div>
     </div>
   </a>
 </div>
 
-  <div class="portfolio-cover">
+<div class="portfolio-cover">
+  <a href="./gladwell.html">
+    <div class="container-fade">
+      <img src="./imgs/gladwell-school-logo.png" alt="" class="portfolio-piece">
+      <div class="overlay">
+        <div class="text">Gladwell School of Massage</br>(website design/development)</div>
+      </div>
+    </div>
+  </a>
+</div>
+
+  <!-- <div class="portfolio-cover">
     <a href="./arabin.html">
       <div class="container-fade">
         <img src="./imgs/arabin-cover-mobile.png" alt="" class="portfolio-piece">
@@ -77,14 +88,14 @@
         </div>
       </div>
     </a>
-  </div>
+  </div> -->
 
   <div class="portfolio-cover">
     <a href="./nourish.html">
       <div class="container-fade">
         <img src="./imgs/nourish-cover-mobile.png" alt="" class="portfolio-piece">
         <div class="overlay">
-          <div class="text">Nourish </br>(mobile app)</div>
+          <div class="text">Nourish </br>(mobile app design)</div>
         </div>
       </div>
     </a>
@@ -125,7 +136,7 @@
 
   </article>
 
-  
+
 
   <div class="under-footer"></div>
 
