--- a/stopmycraving-product.html
+++ b/stopmycraving-product.html
@@ -24,7 +24,7 @@
     <img src="./imgs/stopmycraving-box.png" alt="" class="project-img">
     <h1>StopMyCraving: Product & Packaging.</h1>
     <h2>Client</h2>
-    <p>StopMyCraving is a food tech company that works with independent producers. It was judged a UK Top 20 startup last year, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a> this year. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings.</p>
+    <p>StopMyCraving is a food tech company that works with independent ethical producers. It was judged a UK Top 20 startup last year, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a> this year. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings.</p>
     <h2>Brief</h2>
     <p>I worked closely with the developer, CEO, and nutritionist to develop user-centered products and packaging.</p>
     <h2>Deliverables</h2>
