--- a/gladwell.html
+++ b/gladwell.html
@@ -22,18 +22,22 @@
 
     <div class="under-nav"></div>
 
-    <iframe src="https://marvelapp.com/341di3c?emb=1&iosapp=false&frameless=false" allowTransparency="true" frameborder="0" onload="this.width=screen.width;this.height=screen.height;" margin="0"></iframe>
-
   <article class="project-wrapper">
+    <a href="http://gladwellschoolofmassage.com/" target="_blank">
+      <img src="./imgs/gladwell-imac.png" alt="" class="project-img">
+    </a>
     <h1>Gladwell School of Massage: Website & Logo.</h1>
   <h2>Client</h2>
   <p>Daniel Gladwell is a renowned massage therapist with over 20 years' international experience. He gives professional training courses and needed a website and logo to showcase his school.
   <h2>Brief</h2>
-  <p>Gladwell School of Massage needs to appeal to a tried and tested user group (25-35 year olds with interests in yoga and other healing practices). The branding must tie in with that of Daniel's existent personal brand, to capture and reinforce his current network.</p>
+  <p><a href="http://gladwellschoolofmassage.com/" target="_blank">Gladwell School of Massage</a> needs to appeal to a tried and tested user group (25-35 year olds with interests in yoga and other healing practices). The branding must tie in with that of Daniel's existent personal brand, to capture and reinforce his current network.</p>
   <h2>Deliverables</h2>
   <p>Mobile-friendly website with integrated contact forms developed on Squarespace, along with a logo that clearly conveys the purpose of the school.</p>
   <h2>Process</h2>
-  <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. The bright colours are warm, upon Daniel's request, and the font is accessible, with a slightly handwritten slant. Both the colour scheme and the font reflect the approachable nature of the school.</p>
+  <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. The bright colours are warm, upon Daniel's request, and the font is accessible, with a slightly handwritten slant. Both the colour scheme and the font reflect the approachable nature of the school. This instagram-esque minimalism is popular with the wellness-seeking user group.</p>
+  <p>Importantly, the website is scalable, with the possibility of adding new features based on growing user needs, such as a booking system.</p>
+  <h2>Feedback</h2>
+  <p><em>"I can highly recommend Lucy for web design. She will do it quickly, conscientiously, very artistically, and make very good suggestions as to how things should be presented. Any corrections will be quickly fixed and she will not stop until everything is as you would want to to be. Her prices are very reasonable and her dedication to giving you the best exposure to the outside world is truly endearing.</br>Thank you again Lucy. I am very very pleased. Daniel."</em></p>
     <p><em>I'm using: pencil and paper for rapid prototyping, Squarespace for development, Photoshop for the logo.</em></p>
   </article>
   <div class="under-footer"></div>
