--- a/stopmycraving-website.html
+++ b/stopmycraving-website.html
@@ -27,7 +27,7 @@
 
     <h1>StopMyCraving: E-commerce Website Design.</h1>
     <h2>Client</h2>
-    <p><a href="https://stopmycraving.com/" target="_blank">StopMyCraving</a> is a food tech company that works with independent producers. It has been judged a UK Top 20 startup, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a>. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings. It requires in depth knowledge of user behaviour.</p>
+    <p><a href="https://stopmycraving.com/" target="_blank">StopMyCraving</a> is a food tech company that works with independent ethical producers. It has been judged a UK Top 20 startup, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a>. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings. It requires in depth knowledge of user behaviour.</p>
     <h2>Brief</h2>
     <p>I worked closely with the developer, CEO, and nutritionist to re-design and re-brand the entire online store.</p>
     <h2>Deliverables</h2>
