--- a/gladwell.html
+++ b/gladwell.html
@@ -33,6 +33,9 @@
   <p><a href="http://gladwellschoolofmassage.com/" target="_blank">Gladwell School of Massage</a> needs to appeal to a tried and tested user group (25-35 year olds with interests in yoga and other healing practices). The branding must tie in with that of Daniel's existent personal brand, to capture and reinforce his current network.</p>
   <h2>Deliverables</h2>
   <p>Mobile-friendly website with integrated contact forms developed on Squarespace, along with a logo that clearly conveys the purpose of the school.</p>
+  <br>
+  <img src="./imgs/gladwell-colours.png" alt="" class="project-img">
+  <br>
   <h2>Process</h2>
   <p>We identified the key user group using Facebook analytics and user feedback. The needs of the user were pretty straightforward: find out about the school, view courses, and somehow register interest. The simple navigation that ensued is a basic solution. The bright colours are warm, upon Daniel's request, and the font is accessible, with a slightly handwritten slant. Both the colour scheme and the font reflect the approachable nature of the school. This instagram-esque minimalism is popular with the wellness-seeking user group.</p>
   <p>Importantly, the website is scalable, with the possibility of adding new features based on growing user needs, such as a booking system.</p>
