--- a/plantbox.html
+++ b/plantbox.html
@@ -30,18 +30,25 @@
 
     <h1>PlantBox: E-commerce Website Design.</h1>
     <h2>Client</h2>
-    <p><a href="https://plantbox.garden/" target="_blank">PlantBox</a> is a sustainable, planting system for vertical gardens.</p>
+    <p><a href="https://plantbox.garden/" target="_blank">PlantBox</a> is a small and ambitious company that sells sustainable planting systems for vertical gardens.</p>
+    <h2>Users</h2>
+    <p>Their users are urban dwellers with outdoor wall space who are keen to see more green. Landscape gardeners are already early adopters, but PlantBox would like to attract members of the public too.</p>
     <h2>Brief</h2>
-    <p>The startup needed an e-commerce website and branding from scratch. Their users are landscape gardeners and members of the public with outdoor wall space who are keen to see more green.</p>
+    <p>Design and develop an an e-commerce website and branding for PlantBox from scratch.</p>
+    <br>
+    <img src="./imgs/plantbox-account.png" alt="" class="project-img">
     <h2>Deliverables</h2>
-    <p>A responsive and scalable e-commerce website with full payment and delivery integration, along with a bold logo and brand identity.</p>
+    <p>A responsive and scalable e-commerce website with full payment / delivery integration and customer accounts (pictured above), along with a bold logo and brand identity.</p>
     <h2>Process</h2>
-    <p>We launched a competition for the logo design on 99 Designs. I compiled over 40 logos into an online questionnaire and asked over 30 users within our target group for their opinions. We learned what these users value the most: elegance and simplicity.</p>
+    <p>I included over 40 prototyped logos (from several different designers) into an online questionnaire and asked over 30 users within our target group for their opinions. The final logo was chosen and, in the process, we learned what type of brand image these users gravitate towards.</p>
     <p>I prototyped the layout of the website firstly using paper, so that I could rapidly test the information hierarchy and accessibility. I realised that it made sense to "Shop By Category", as the PlantBox flagship product comes in 3 component parts.</p>
-    <p>The <a href="https://plantbox.garden/about/" target="_blank">How it Works</a> section is prominent on the page, and contains downloadable installation guides. The brand aims to be accessible and show that PlantBox can be used by people who aren't necessarily DIY aficionados; many of our users have busy lifestyles.</p>
+    <p>The <a href="https://plantbox.garden/about/" target="_blank">How it Works</a> section is prominent on the page, and contains downloadable installation guides and diagrams (see example below). The brand aims to be accessible and show that PlantBox can be used by people who aren't necessarily DIY aficionados; our general public users have busy lifestyles.</p>
+    <br>
+    <img src="./imgs/plantbox-irrigation-kit.png" alt="" class="project-img">
     <h2>Outcomes</h2>
-    <p>The new website and bold brand identity are vital steps towards upscaling the startup, and have been favourably recognised by a national garden centre that is keen to collaborate. It currently has a B2C focus, but is looking to attract more B2B customers in future.</p>
-    <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator, inVision, Zeplin.</em></p>
+    <p>The new website and bold brand identity are vital steps towards upscaling the startup, and have been favourably recognised by a national garden centre that is keen to collaborate.</p>
+    <p><em>I'm using: Google forms (user questionnaires) pencil and paper for rapid prototyping, Sketch app (wireframing), Wordpress & WooCommerce (e-commerce interface and back end), Photoshop and Illustrator (pdf guides, iconography).</em></p>
+
   </article>
   <div class="under-footer"></div>
   <footer>
