--- a/stopmycraving-product.html
+++ b/stopmycraving-product.html
@@ -21,7 +21,7 @@
   </nav>
   <article class="project-wrapper">
     <div class="under-nav"></div>
-    <img src="./imgs/stopmycraving-box.png" alt="" class="project-img">
+    <img src="./imgs/stopmycraving-moodings.png" alt="" class="project-img">
     <h1>StopMyCraving: Product & Packaging.</h1>
     <h2>Client</h2>
     <p>StopMyCraving is a food tech company that works with independent ethical producers. It was judged a UK Top 20 startup last year, with a place on <a href="https://medium.com/accelerace-family/startup-spotlight-stopmycraving-healthy-snacks-right-to-your-door-f8f4ab410c91" target="_blank">Europe's Number 1 accelerator programme</a> this year. Their online store enables users to search for nutritious snacks and drinks according to their lifestyle goals, dietary needs, and cravings.</p>
@@ -29,7 +29,7 @@
     <p>I worked closely with the developer, CEO, and nutritionist to develop user-centered products and packaging.</p>
     <h2>Deliverables</h2>
     <p>Based on extensive research into healthy snacking trends, I co-designed a range of seven "snack boxes" that correspond to our target users. See the Valentine's Box below...</p>
-    <img src="./imgs/valentines-box-open-tissue.png" alt="" class="project-img">
+    <img src="./imgs/valentines-box-open-tissue.png" alt="" class="project-img soft-border">
     <h2>Process</h2>
     <p>I held focus groups to verify hypotheses about who our target users are and what they need or want. The team then adopted a "beachhead" marketing strategy, i.e. winning over specific consumer groups in order to break into the mainstream.</p>
     <p>The contents of the boxes are selected from our range of snacks and drinks with the target user in mind, e.g. the Yummy Mummy box contains all organic products.</p>
